[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herald-cpg"
version = "0.1.0"
description = "Turn clinical guideline PDFs into deterministic, auditable decision engines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Matthew Gavin" },
]
keywords = [
    "clinical-guidelines",
    "healthcare",
    "clinical-decision-support",
    "cpg",
    "medical-ai",
    "deterministic-ai",
    "auditable-ai",
    "fhir",
    "medical-informatics",
    "guidelines-as-code",
    "herald",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "markitdown[all]>=0.1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
dev = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.scripts]
herald = "herald_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/myceldigital/herald"
Repository = "https://github.com/myceldigital/herald"
Issues = "https://github.com/myceldigital/herald/issues"
Documentation = "https://github.com/myceldigital/herald#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/herald_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/herald_cli/parse.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
